Fixed spacing issues

--- a/src/pages/PlatformDashboard/styles.css
+++ b/src/pages/PlatformDashboard/styles.css
@@ -447,7 +447,6 @@
 
 .whiteSectionWrapper{
   padding: 100px 0px;
-  padding-bottom: 0px;
 
   .sectionHighlight{
     font-family: 'SoleilSb';
@@ -571,7 +570,6 @@
 
   .whiteSectionWrapper{
     padding: 80px 0;
-    padding-bottom: 0;
 
     .whiteSectionContainer{
       > h3{
